[build-system]
requires = [
    "hatchling>=1.10.0", "ipykernel"
]
build-backend = "hatchling.build"

[project]
name="gp_kernel"
dynamic = [
    "version",
]
description="A gp kernel for Jupyter"
authors=[{name = "Edgar Costa", email = "edgarc@mit.edu"}]
license={text = "BSD License"}
keywords=["gp", "kernel", "jupyter"]
readme = "README.md"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python"
]
dependencies = [
    "pexpect",
    "ipykernel",
    "jupyter_client",
]

[project.urls]
homepage = "https://github.com/edgarcosta/gp_kernel"
repository = "https://github.com/edgarcosta/gp_kernel"

[tool.hatch.version]
path = "gp_kernel/__init__.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
include = [
    "/gp_kernel",
]


[tool.hatch.build.targets.wheel.shared-data]
"data_kernelspec/share" = "share"

